--- a/Classifying New Particle Formation.qmd
+++ b/Classifying New Particle Formation.qmd
@@ -9,11 +9,12 @@ format:
 #Tähän ulkopuoliset importit
 import matplotlib.pyplot as plt
 import pandas as pd
+import numpy as np
 ```
 
 ```{python}
 #Tähän Eliaksen importit
-from subset_selection import cv_results_binary, RFE_df_binary, cv_results_multi, RFE_df_multi
+
 ```
 
 ```{python}
@@ -86,6 +87,8 @@ Another preprocessing method is feature selection, for which we have used Recurs
 With RFE we get the following results for binary classification
 
 ```{python}
+RFE_df_binary = pd.read_csv('RFE_binary.csv')
+RFE_df_multi = pd.read_csv('RFE_multi.csv')
 print(RFE_df_binary)
 print(RFE_df_multi)
 ```
@@ -93,40 +96,51 @@ print(RFE_df_multi)
 on this table we can compare the improvements RFE provides, able to increase binary classification accuracy by couple percent compared to including all features.
 
 ```{python}
+cv_results_binary = np.load('binaryCV.npy')
 
-LR1_results = cv_results_binary[0].iloc[:40]
-LR2_results = cv_results_binary[1].iloc[:40]
-DT_results = cv_results_binary[2].iloc[:40]
+LR1_results = pd.DataFrame(cv_results_binary[0][:40])
+LR2_results = pd.DataFrame(cv_results_binary[1][:40])
+DT_results = pd.DataFrame(cv_results_binary[2][:40])
+RF_results = pd.DataFrame(cv_results_binary[3][:40])
+SVC_results = pd.DataFrame(cv_results_binary[4][:40])
 
-LR1_results2 = cv_results_multi[0].iloc[:40]
-LR2_results2 = cv_results_multi[1].iloc[:40]
-DT_results2 = cv_results_multi[2].iloc[:40]
-#NB_results = cv_results[2].iloc[:40]
-
-plt.subplot(1,2,1)
-plt.plot(LR1_results["n_features"], LR1_results["mean_test_score"], color='red', label='LR (Lasso)')
-plt.plot(LR2_results["n_features"], LR2_results["mean_test_score"], color='blue', label='LR (Ridge)')
-plt.plot(DT_results["n_features"], DT_results["mean_test_score"], color='green', label='Decicion Tree')
-#plt.plot(NB_results["n_features"], NB_results["mean_test_score"], color='green', label='Naive Bayes')
+plt.plot(LR1_results[2], LR1_results[0], color='red', label='LR (Lasso)')
+plt.plot(LR2_results[2], LR2_results[0], color='blue', label='LR (Ridge)')
+plt.plot(DT_results[2], DT_results[0], color='green', label='Decicion Tree')
+plt.plot(RF_results[2], RF_results[0], color='orange', label='Random Forest')
+plt.plot(SVC_results[2], SVC_results[0], color='purple', label='Support Vector Classification')
 
 plt.legend()
 plt.title('RFE binary classification accuracy')
 
-plt.subplot(1,2,2)
-plt.plot(LR1_results2["n_features"], LR1_results2["mean_test_score"], color='red', label='LR (Lasso)')
-plt.plot(LR2_results2["n_features"], LR2_results2["mean_test_score"], color='blue', label='LR (Ridge)')
-plt.plot(DT_results2["n_features"], DT_results2["mean_test_score"], color='green', label='Decicion Tree')
-#plt.plot(NB_results["n_features"], NB_results["mean_test_score"], color='green', label='Naive Bayes')
-
-plt.legend()
-plt.title('RFE multiclass accuracy')
-
-plt.show()
+plt.show() 
 
 ```
 
 We can see that increasing features results in better accuracy, usually having the best accuracy at 10-20 features.
 We currently only have linear regression with L1 (lasso) and L2 (ridge) penalties. After comparing different models, we will probably use some combination of PCA and Feature selection in our final model
+
+```{python}
+
+cv_results_multi = np.load('multiCV.npy')
+
+LR1_results2 = pd.DataFrame(cv_results_multi[0][:40])
+LR2_results2 = pd.DataFrame(cv_results_multi[1][:40])
+DT_results2 = pd.DataFrame(cv_results_multi[2][:40])
+RF_results2 = pd.DataFrame(cv_results_multi[3][:40])
+SVC_results2 = pd.DataFrame(cv_results_multi[4][:40])
+
+plt.plot(LR1_results2[2], LR1_results2[0], color='red', label='LR (Lasso)')
+plt.plot(LR2_results2[2], LR2_results2[0], color='blue', label='LR (Ridge)')
+plt.plot(DT_results2[2], DT_results2[0], color='green', label='Decicion Tree')
+plt.plot(RF_results2[2], RF_results2[0], color='orange', label='Random Forest')
+plt.plot(SVC_results2[2], SVC_results2[0], color='purple', label='Support Vector Classification')
+
+plt.legend()
+plt.title('RFE 3-class accuracy')
+
+plt.show() 
+```
 
 # Feature analysis
 
